--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
     ],
     "license": "MIT",
     "require": {
-        "laravel/framework": "^8.0 | ^9.0",
-        "php": "^7.4 | ^8.0 | ^8.1",
+        "laravel/framework": "^8.0 | ^9.0 | ^10.0",
+        "php": "^7.4 | ^8.0 | ^8.1 | ^8.2",
         "kanagama/csvreader": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
+        "phpunit/phpunit": "^9.0 | ^10.0",
         "orchestra/testbench": "^6.25",
         "phpstan/phpstan": "^1.10"
     },
