--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -1,5 +1,24 @@
 version: "3.8"
 services:
+  mysql80_csv_to_seeder:
+    container_name: mysql80_csv_to_seeder
+    build:
+      context: .
+      dockerfile: ./.docker/dockerfile/MySQL80_Dockerfile
+    ports:
+      - 13306:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: tests
+      MYSQL_USER: user
+      MYSQL_PASSWORD: pass
+    # 永続化は不要
+    # volumes:
+    #   - ./mysql_data:/var/lib/mysql
+    volumes:
+      # 起動時にSQLを実行する
+      - ./.docker/mysql-init:/docker-entrypoint-initdb.d
+
   php74_csv_to_seeder:
     container_name: php74_csv_to_seeder
     build:
