--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0 | ^10.0",
-        "orchestra/testbench": "^6.25",
+        "orchestra/testbench": "*",
         "phpstan/phpstan": "^1.10"
     },
     "autoload": {
