--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -9,32 +9,44 @@ services:
       - 13306:3306
     environment:
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: tests
       MYSQL_USER: user
       MYSQL_PASSWORD: pass
-    # 永続化は不要
-    # volumes:
-    #   - ./mysql_data:/var/lib/mysql
+    init: true
+    tmpfs:
+      - /var/lib/mysql
     volumes:
       # 起動時にSQLを実行する
-      - ./.docker/mysql-init:/docker-entrypoint-initdb.d
+      - ./.docker/multi-mysql-init:/docker-entrypoint-initdb.d
+      - ./.docker/mysql-init:/sql
 
   php74_csv_to_seeder:
     container_name: php74_csv_to_seeder
     build:
       context: .
       dockerfile: ./.docker/dockerfile/PHP74_Dockerfile
+    environment:
+      DB_HOST: mysql80_csv_to_seeder
+      DB_DATABASE: tests74
+      MYSQL_USER: root
+      MYSQL_PASSWORD: password
     volumes:
       - .:/var/www/html
     # restart: unless-stopped
     init: true
     command: ./.docker/command/test.sh
+    depends_on:
+      - mysql80_csv_to_seeder
 
   php80_csv_to_seeder:
     container_name: php80_csv_to_seeder
     build:
       context: .
       dockerfile: ./.docker/dockerfile/PHP80_Dockerfile
+    environment:
+      DB_HOST: mysql80_csv_to_seeder
+      DB_DATABASE: tests80
+      MYSQL_USER: root
+      MYSQL_PASSWORD: password
     volumes:
       - .:/var/www/html
     # restart: unless-stopped
@@ -48,6 +60,11 @@ services:
     build:
       context: .
       dockerfile: ./.docker/dockerfile/PHP81_Dockerfile
+    environment:
+      DB_HOST: mysql80_csv_to_seeder
+      DB_DATABASE: tests81
+      MYSQL_USER: root
+      MYSQL_PASSWORD: password
     volumes:
       - .:/var/www/html
     # restart: unless-stopped
@@ -61,6 +78,11 @@ services:
     build:
       context: .
       dockerfile: ./.docker/dockerfile/PHP82_Dockerfile
+    environment:
+      DB_HOST: mysql80_csv_to_seeder
+      DB_DATABASE: tests82
+      MYSQL_USER: root
+      MYSQL_PASSWORD: password
     volumes:
       - .:/var/www/html
     # restart: unless-stopped
